kube/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: rails
  labels:
    app: inbox-ms
spec:
  ports:
    - port: 3000
  selector:
    app: inbox-ms
    tier: rails
