kube/postgres_setup.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: inbox-ms
spec:
  ports:
    - port: 5432
  selector:
    app: inbox-ms
    tier: postgres
